--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 -->
 <html>
 	<head>
-		<title>Dr.Harshana Niriella</title>
+		<title>Harshana Niriella</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +15,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Harshana Niriella</strong>,<br /> Ayurvedic doctor,NFT Artist and an Entrepreneur from Sri Lanka
+					<h1><strong>I am Harshana Niriella</strong>,<br />A Medical Student,an NFT Artist and an Entrepreneur from Sri Lanka
 				</div>
 			</header>
 
