--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Harshana Niriella</strong>,<br> />A Medical Student,an NFT Artist and an Entrepreneur from Sri Lanka
+					<h1><strong>I am Harshana Niriella</strong>,</h1><br> A Medical Student,an NFT Artist and an Entrepreneur from Sri Lanka
 				</div>
 			</header>
 
